src/styles/partials/_home.scss
.view-home {

    section {
        position: relative;

        &.hero.home {
            height: 700px;

            .hero-img-contain {
                position: absolute;
                height: 700px;
                background: $off-white;

                img {
                    position: position;
                    width: 101%;
                    min-height: 700px;
                }
            }
        }

        &.hero {
            height: 750px;
            background: $white;
            border-bottom: 1px solid #eee;

            .hero-img-contain { height: 750px; }

            .wrapper {
                position: relative;
                .hero-content {
                    position: absolute;
                    top: 50%;
                    text-align: left;

                    h1, p {
                        color: $white;
                        width: 250px;
                        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
                    }

                    a.outline-btn {
                        border: 1px solid $white;
                        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), inset 0 1px 2px rgba(0, 0, 0, 0.1);

                        color: $white;
                        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
                    }

                    a {
                        span.signup-btn { display: none; }
                        span.demo-btn { display: inline-block; }
                    }
                }
            }

            $laptop-width: 550px;

            .laptop {
                position: absolute;
                top: 50%;
                left: 50%;
                width: $laptop-width;
                margin-top: -200px;
                margin-left: -68px;

                &.mobile { display: none; }
            }
        }

        &.key {
            background: $white;

            .wrapper {
                font-size: 0;

                .key-content {
                    width: 300px;
                    margin: 70px 15px;
                    display: inline-block;
                    vertical-align: top;

                    font-size: $base-font-size;

                    h2 {
                        max-width: 200px;
                        display: inline-block;
                    }

                    p.icon {
                        display: inline-block;
                        font-size: 25px;
                        margin: 0 15px 10px 0;
                        color: $light-grey;
                    }

                    p { max-width: 340px; }
                    &:first-child { margin-left: 0; }
                    &:last-child { margin-right: 0; }
                }
            }
        }

        &.feature {
            background: #f7f7f7;

            .wrapper {
                position: relative;

                .hero-content {
                    margin: 125px 0 145px;
                    display: inline-block;

                    color: $medium-grey;

                    a {
                        border: 1px solid $medium-grey;
                        color: #73838e;
                    }
                }

                .filters, .paper, .how-it-works {
                    position: absolute;
                    right: -55px;
                    bottom: -7px;
                    width: 65%;
                    max-width: 600px;
                    display: inline-block;
                }

                .how-it-works {
                    top: 140px;
                    right: -12px;
                }

            }
        }

        &.exporting {
            background: $yellow;
            overflow: hidden;
        }

        &.right {
            background: $white;

            .wrapper {
                text-align: right;

                .hero-content { text-align: left; }
            }
        }

        &.how {
            background: #f7f7f7;
            border-top: 1px solid #eee;
            border-bottom: 1px solid #eee;

            .wrapper {
                .hero-content {
                    margin: 95px 0 130px;
                    display: inline-block;

                    counter-reset: step;

                    li {
                        margin: 20px 30px 40px 0;
                        display: block;


                        .step { margin: 5px 20px 0 0; }

                        p {
                            max-width: 250px;
                            margin: 0 0 0 60px;
                        }

                        a { margin: 8px 0 0 0; }
                    }

                    p { margin: 0; }

                    a {
                        border: 1px solid $medium-grey;
                        color: $medium-grey;
                    }
                }

                img { margin: 0 0 -25px 20px; }
            }
        }

        &.testimonials {
            background: $white;
            border-bottom: 1px solid #eee;
            padding: 60px 0px;

            .wrapper {
                text-align: center;

                .quote-wrapper {
                    position: relative;
                    max-width: 700px;
                    margin: 0 auto;
                    height: 200px;
                    width: 80%;

                    q {
                        @include transition(0.3s);
                        display: block;
                        padding: 20px 30px 50px 30px;

                        color: $navy;
                        font-size: 24px;
                        font-weight: $regular-weight-font;
                        line-height: 32px;
                        text-transform: none;
                        word-spacing: 1px;

                        position: absolute;
                        top: 50%;
                        -webkit-transform: translateY(-50%);
                        -ms-transform: translateY(-50%);
                        transform: translateY(-50%);
                    }
                }

                ul.bragging-rights {
                    margin: 0 auto;
                    margin-bottom: 80px;
                    width: 50%;
                    max-width: 460px;

                    li {
                        display: none;
                        vertical-align: middle;

                        &.active { display: inline-block; }
                    }
                }

                ul.people {
                    font-size: 0;

                    li {
                        @include transition(0.3s);
                        width: 240px;
                        display: inline-block;
                        vertical-align: top;
                        opacity: 0.3;

                        &.active { opacity: 1; }

                        &:hover {
                            cursor: pointer;
                            opacity: 1;
                        }

                        img {
                            width: 80px;
                            border-radius: 100%;
                            margin: 0 0 10px 0;
                        }
                    }
                }
            }
        }

        &.gym-badges {
            background: $white;
            .wrapper {
                ul {
                    font-size: 0;
                    text-align: center;

                    li {
                        margin: 0 20px;
                        display: inline-block;

                        img {
                            margin: 70px 0;
                        }
                    }
                }
            }
        }
    }
}

